--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body,
 div,
 button {
-  /* font: inherit - 폰트 버그를 잡기 위한 초기화 */
+  /* font: inherit - 폰트 버그를 잡기 위한 초기화 화화화화화화화*/
   font: inherit;
   font-size: 16px;
   user-select: none;
