하는데 까지 해본 "경계선 움직이기", 미해결사항 : (1) 마우스가 빠르게 빠지면 못 쫓아감, (2) removeEventListener 적용못함, (3) 이상하게 포인터가 경계선 엘리먼트의 좌측만 인식하여 -5를 해줌(resize(e.pageX - 5);) 그런데 이게 맞는지 모름

--- a/event/event_style.css
+++ b/event/event_style.css
@@ -30,7 +30,7 @@ body {
 }
 
 #right-side {
-  width: calc(100% - 300px - 10px);
+  width: calc(100% - (300px + 10px));
   height: 100vh;
 
   position: absolute;
@@ -39,3 +39,9 @@ body {
 
   background-color: burlywood;
 }
+
+/* #target {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+} */
