--- a/event/event_style.css
+++ b/event/event_style.css
@@ -1,14 +1,3 @@
-body {
-  margin: 0;
-  position: relative;
-}
-
-#left-side {
-  width: 300px;
-  height: 100vh;
-  background-color: skyblue;
-}
-
 /* (1) 사이드바 이동방향 : 오른쪽 */
 /*      왼쪽면      |        오른쪽면        */
 /*    width 증가    | width 감소 , left 증가 */
@@ -17,9 +6,31 @@ body {
 /*      왼쪽면      |        오른쪽면        */
 /*    width 감소    | width 증가 , left 감소 */
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* display: flex; */
+  /* flex-direction: row; */
+}
+
+#left-side {
+  /* width: 300px; */
+  width: 50%;
+
+  /* height: 100vh; */
+  height: 100%;
+  background-color: skyblue;
+}
+
 #vertical-sidebar {
   width: 10px;
-  height: 100vh;
+
+  /* height: 100vh; */
+  height: 100%;
 
   position: absolute;
   left: 300px;
@@ -30,12 +41,19 @@ body {
 }
 
 #right-side {
-  width: calc(100% - (300px + 10px));
-  height: 100vh;
+  /* width: calc(100% - (300px + 10px)); */
+  /* width: calc(100% - (310px)); */
+  width: 50%;
 
-  position: absolute;
-  left: calc(300px + 10px);
-  top: 0px;
+  /* height: 100vh; */
+  height: 100%;
+
+  /* 2021-12-18 이놈이 문젠가..; */
+  /* position: absolute; */
+
+  /* left: calc((300 + 10) px); */
+  /* left: 310px;
+  top: 0px; */
 
   background-color: burlywood;
 }
